Fix spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,18 @@
-html, body, .all-text {
+html, body, .container {
 	height: 100%;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
 }
 
 .all-text {
 	display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+	flex: 1;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 body,footer {
@@ -42,25 +48,25 @@ h3 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
--webkit-animation: AnimationName 59s ease infinite;
--moz-animation: AnimationName 59s ease infinite;
-animation: AnimationName 59s ease infinite;
+  -webkit-animation: AnimationName 59s ease infinite;
+  -moz-animation: AnimationName 59s ease infinite;
+  animation: AnimationName 59s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:50% 0%}
-    50%{background-position:50% 100%}
-    100%{background-position:50% 0%}
+  0%{background-position:50% 0%}
+  50%{background-position:50% 100%}
+  100%{background-position:50% 0%}
 }
 @-moz-keyframes AnimationName {
-    0%{background-position:50% 0%}
-    50%{background-position:50% 100%}
-    100%{background-position:50% 0%}
+  0%{background-position:50% 0%}
+  50%{background-position:50% 100%}
+  100%{background-position:50% 0%}
 }
 @keyframes AnimationName { 
-    0%{background-position:50% 0%}
-    50%{background-position:50% 100%}
-    100%{background-position:50% 0%}
+  0%{background-position:50% 0%}
+  50%{background-position:50% 100%}
+  100%{background-position:50% 0%}
 }
 
 @media (max-width: 320px) {
